Team page styling

--- a/style_team.css
+++ b/style_team.css
@@ -10,13 +10,13 @@ html {
 body {
     background: #fafafa;
     font-family: 'National 2', sans-serif;
-    font-size: 11px;
+    font-size: 14px;
     font-weight: lighter;
 }
 
 @media only screen and (min-width: 540px) {
     body {
-        font-size: 14px;
+        font-size: 16px;
     }
 }
 
@@ -53,12 +53,23 @@ h1 {
     margin-bottom: 0px;
 }
 
+h3 {
+    font-family: 'National 2', sans-serif;
+    font-size: 13px;
+    font-weight: 400;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+    letter-spacing: 0.5px;
+    margin-top: 25px;
+}
+
 @media only screen and (min-width: 640px) {
     h1 {
         font-size: 70px;
         line-height: 70px;
         width: 100%;
         margin-bottom: 25px;
+        margin-left: -2px;
     }
 }
 
@@ -102,28 +113,6 @@ h2 {
     letter-spacing: 0.1px;
 }
 
-#myteam h2 {
-    font-family: 'Bureau Grot Compressed';
-    font-size: 23px;
-    text-transform: uppercase;
-}
-
-#member {
-    margin-bottom: 35px;
-}
-
-#myteam #member h2 {
-    font-family: 'National 2';
-    text-transform: none;
-    font-size: 15px;
-    margin-bottom: 5px;
-    margin-top: 10px;
-}
-
-#myteam #member p {
-    font-size: 13px;
-}
-
 .modal .contact_info {
     margin-top: 25px;
     line-height: 25px;
@@ -139,7 +128,9 @@ h2 {
 .modal h3 {
     font-size: 15px;
     font-weight: 300;
+    text-transform: none;
     margin-bottom: 25px;
+    margin-top: 0;
 }
 
 .modal p {
@@ -149,30 +140,6 @@ h2 {
 }
 
 /* Header */
-
-header {
-    padding: 50px 25px;
-}
-
-@media only screen and (min-width: 640px) {
-    header {
-        max-width: 1300px;
-        margin: 0 auto;
-        padding-top: 100px;
-        padding-bottom: 25px;
-    }
-}
-
-.header_inner {
-    display: block;
-}
-
-@media only screen and (min-width: 640px) {
-    .header_inner {
-        display: grid;
-        grid-template-columns: 3.5fr 1fr;
-    }
-}
 
 .logo {
     position: absolute;
@@ -224,16 +191,16 @@ header {
 
 main {
     display: block;
-    padding: 25px;
+    padding: 50px 25px;
 }
 
 @media only screen and (min-width: 540px) {
     main {
-        max-width: 1300px;
+        max-width: 1400px;
         margin: 0 auto;
         display: grid;
-        grid-template-columns: 3fr 1fr;
-        grid-gap: 3em;
+        grid-template-columns: 1fr 3fr;
+        grid-gap: 5em;
         padding-bottom: 50px;
     }
 }
@@ -256,7 +223,7 @@ main {
 
 #team img {
     width: 100%;  
-    max-height: 250px;
+    max-height: 200px;
     object-fit: cover;
     object-position: top;
     cursor: pointer;
@@ -276,7 +243,7 @@ main {
         text-align: right;
         float: right;
         position: relative;
-        top: -310px;
+        top: -270px;
         right: 0px;
         max-width: 100px;
         opacity: 0.4;
@@ -411,7 +378,7 @@ main {
         max-height: none;
         position: relative;
         border-radius: 0;
-        margin-bottom: -5px;
+        margin-bottom: -6px;
         bottom: 0px;
         right: 0px;
     }
@@ -458,37 +425,45 @@ main {
     margin-bottom: 10px;
 }
 
-.copy_text {
-    font-size: 12px;
-    float: right;
-    position: relative;
-    margin-top: -25px;
-    text-transform: uppercase;
-    font-weight: 300;
-    letter-spacing: 1px;
-    display: none;
-}
-
 .link_container {
     display: none;
     padding: 25px;
     padding-top: 5px;
     background: #fff;
     position: relative;
-    padding-top: 15px;
+    margin-top: -5px;
     box-shadow: 0px 0px 20px -14px rgba(199, 199, 199, 0.6);
     width: 100%;
 }
 
+@media only screen and (min-width: 1000px) {
+    .team_info {
+        padding-top: 100px;
+    }
+}
+
+.copy_text {
+    font-size: 13px;
+    margin-top: 25px;
+    float: right;
+    padding-right: 30px;
+    position: relative;
+    margin-top: -1px;
+    text-transform: uppercase;
+    font-weight: 400;
+    letter-spacing: 0.5px;
+    display: none;
+}
+
 #link_input {
     padding: 9px 10px;
-    padding-right: 35px;
+    padding-right: 35px !important;
     font-family: 'National 2', sans-serif;
     font-weight: 300;
     border: 1px solid #e0e0e0;
     background: #f5f5f5;
-    width: 100%;
-    display: table-cell;
+    width: 90%;
+    margin-bottom: 25px;
 }
 
 #clipboard_copy {
@@ -592,6 +567,7 @@ button {
 
 @media only screen and (min-width: 1000px) {
     #team {
+        padding-top: 40px;
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         grid-gap: 3em;
