--- a/style.css
+++ b/style.css
@@ -124,30 +124,6 @@ h2 {
     font-size: 13px;
 }
 
-.modal .contact_info {
-    margin-top: 25px;
-    line-height: 25px;
-    font-size: 14px;
-}
-
-.modal h2 {
-    font-size: 20px;
-    font-weight: 500;
-    margin-bottom: 10px;
-}
-
-.modal h3 {
-    font-size: 15px;
-    font-weight: 300;
-    margin-bottom: 25px;
-}
-
-.modal p {
-    font-size: 14px;
-    line-height: 25px;
-
-}
-
 /* Header */
 
 header {
@@ -572,7 +548,7 @@ button {
     top: -25px;
 }
 
-.modal .add {
+.add_modal {
     right: 10px;
     bottom: 25px;
     background-image: url('img/icons/add_icon.svg');
@@ -596,4 +572,147 @@ button {
         grid-template-columns: 1fr 1fr 1fr;
         grid-gap: 3em;
     }
+    #section_team #team {
+        margin-top: 30px;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-gap: 3em;
+    }
+}
+
+/* Team page */
+
+#section_team {
+    display: block;
+    padding: 50px 25px;
+}
+
+@media only screen and (min-width: 1000px) {
+    .team_info {
+        padding-top: 100px;
+    }
+}
+
+@media only screen and (min-width: 740px) {
+    #section_team {
+        max-width: 1400px;
+        margin: 0 auto;
+        display: grid;
+        grid-template-columns: 1fr 3fr;
+        grid-gap: 5em;
+        padding-bottom: 50px;
+    }
+}
+
+#section_team #team img {
+    width: 100%;  
+    max-height: 200px;
+    object-fit: cover;
+    object-position: top;
+    cursor: pointer;
+}
+
+@media only screen and (min-width: 1000px) {
+    #section_team #team p[data-field=department] {
+        display: block;
+        text-align: right;
+        float: right;
+        position: relative;
+        top: -265px;
+        right: 0px;
+        max-width: 100px;
+        opacity: 0.4;
+    }
+}
+
+#section_team .copy_text {
+    
+    margin-top: 25px;
+}
+
+#section_team #link_input {
+    padding: 9px 10px;
+    padding-right: 35px !important;
+    font-family: 'National 2', sans-serif;
+    font-weight: 300;
+    border: 1px solid #e0e0e0;
+    background: #f5f5f5;
+    width: 100%;
+    margin-bottom: 25px;
+}
+
+@media only screen and (min-width: 740px) {
+    #section_team #link_input {
+        width: 90%;
+        margin-bottom: 25px;
+    }
+
+    #section_team .copy_text {
+        font-size: 13px;
+        margin-top: 25px;
+        float: right;
+        padding-right: 30px;
+        position: relative;
+        margin-top: 0px;
+        text-transform: uppercase;
+        font-weight: 300;
+        letter-spacing: 1px;
+        display: none;
+    }
+}
+
+@media only screen and (min-width: 1000px) {
+    #section_team #team p[data-field=department] {
+        display: block;
+        text-align: right;
+        float: right;
+        position: relative;
+        top: -265px;
+        right: 0px;
+        max-width: 100px;
+        opacity: 0.4;
+    }
+}
+
+#section_team .input_group {
+    padding-top: 5px;
+    display: block;
+}
+
+#section_team h3 {
+    font-family: 'National 2', sans-serif;
+    font-size: 13px;
+    font-weight: 300;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+    letter-spacing: 1px;
+    margin-top: 25px;
+}
+
+/* Modal */
+
+.modal .contact_info {
+    margin-top: 25px;
+    line-height: 25px;
+    font-size: 14px;
+}
+
+.modal h2 {
+    font-size: 20px;
+    font-weight: 500;
+    margin-bottom: 10px;
+}
+
+.modal h3 {
+    font-size: 15px;
+    font-weight: 300;
+    margin-bottom: 25px;
+    text-transform: none;
+    margin-top: 0;
+}
+
+.modal p {
+    font-size: 14px;
+    line-height: 25px;
+
 }
